# financial_and_data_processing

./: README.md
app/: .env  .env.test  alembic.ini  config.py  docker-compose-override-test.yaml  docker-compose.yaml  main.py  pyproject.toml
app/api/: api.py
app/api/endpoints/: trader.py
app/assignment/: models.py  schema.py
app/assignment/trader/: exceptions.py  models.py  queue_service_imp.py  repository.py  schema.py  service.py
app/core/: db.py  deps.py
app/core/models/: __init__.py  mixins.py  models.py  repository.py
app/core/schema/: base.py  fields.py  schema.py
app/docker/: Dockerfile  entrypoint.sh  start.sh
app/migrations/: env.py
app/migrations/versions/: 20230801_add_trader.py  20230801_add_trader_error_table.py  20230801_fix_update_trader_model_missing_.py
app/test/: conftest.py  test_queue_service.py
