[tool.poetry]
name = "assignment"
version = "0.1.0"
description = "Data Processing and Analysis on Financial Transaction Dataset with API, Queue, Inheritance, List Comprehensions and Generators"
authors = ["Tharinda Wijesekera <seth.tharinda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
pydantic = "^2.1.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
